[package]
name = "rusty_aliyundownload"
version = "0.1.0"
authors = ["happyhe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
clap = "3.0.0-beta.5"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
hyper = "1.4.0"
hyper-tls = "0.6.0"
url = "2.5.2"
percent-encoding = "2"
http = "1.1.0"
crc64fast = "*"
